{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 181,
  "lineage": "f2a6c9e6-0f58-c8c0-396c-69cac8141357",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "private_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0f9288109a6ea15d3",
            "id": "rtb-0f9288109a6ea15d3",
            "owner_id": "648194886491",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-private-route-table"
            },
            "vpc_id": "vpc-09cd3732e3ff9bd62"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "elb",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0330ffc12d7224386",
            "arn": "arn:aws:ec2:eu-west-2:648194886491:instance/i-0737e75f549bd898c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "mb.dev.ec2-profile",
            "id": "i-0737e75f549bd898c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "awskeys-2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-094dd6c121070ebd3",
            "private_dns": "ip-10-0-1-88.eu-west-2.compute.internal",
            "private_ip": "10.0.1.88",
            "public_ip": "35.178.95.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0527e101a1b4d35f2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05ba1180039d12b01",
            "tags": {
              "Name": "mb.dev-ec2-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01518e1a71ff24f4b"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_security_group.ec2_sg",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0330ffc12d7224386",
            "arn": "arn:aws:ec2:eu-west-2:648194886491:instance/i-0889fd98b18ff3353",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "mb.dev.ec2-profile",
            "id": "i-0889fd98b18ff3353",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "awskeys-2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dcaf19f74d37d6e6",
            "private_dns": "ip-10-0-2-92.eu-west-2.compute.internal",
            "private_ip": "10.0.2.92",
            "public_ip": "18.132.17.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02d6d9eb43df78a5e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02beffff1290dcd5a",
            "tags": {
              "Name": "mb.dev-ec2-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01518e1a71ff24f4b"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_security_group.ec2_sg",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-09eb671a52385c003",
            "owner_id": "648194886491",
            "tags": {
              "Name": "mb.dev-gw"
            },
            "vpc_id": "vpc-09cd3732e3ff9bd62"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0376556c3dddc08d8",
            "owner_id": "648194886491",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09eb671a52385c003",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mb.dev-public_route"
            },
            "vpc_id": "vpc-09cd3732e3ff9bd62"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1f5dc83b6dc4730",
            "route_table_id": "rtb-0f9288109a6ea15d3",
            "subnet_id": "subnet-013dcf85d8c8e0121"
          },
          "dependencies": [
            "aws_default_route_table.private_route",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e3ed589302950a7",
            "route_table_id": "rtb-0f9288109a6ea15d3",
            "subnet_id": "subnet-0674c8a275bb9a618"
          },
          "dependencies": [
            "aws_default_route_table.private_route",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017b1d65b6d68dedc",
            "route_table_id": "rtb-0376556c3dddc08d8",
            "subnet_id": "subnet-05ba1180039d12b01"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfba00da6c8349c2",
            "route_table_id": "rtb-0376556c3dddc08d8",
            "subnet_id": "subnet-02beffff1290dcd5a"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:648194886491:security-group/sg-01518e1a71ff24f4b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01518e1a71ff24f4b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ec2 sg",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mb.dev-ec2_sg",
            "name_prefix": null,
            "owner_id": "648194886491",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mb.dev-ec2_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09cd3732e3ff9bd62"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:648194886491:subnet/subnet-013dcf85d8c8e0121",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-013dcf85d8c8e0121",
            "map_public_ip_on_launch": true,
            "owner_id": "648194886491",
            "tags": {
              "Name": "mb.dev-private_subnet.1"
            },
            "vpc_id": "vpc-09cd3732e3ff9bd62"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:648194886491:subnet/subnet-0674c8a275bb9a618",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0674c8a275bb9a618",
            "map_public_ip_on_launch": true,
            "owner_id": "648194886491",
            "tags": {
              "Name": "mb.dev-private_subnet.2"
            },
            "vpc_id": "vpc-09cd3732e3ff9bd62"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:648194886491:subnet/subnet-05ba1180039d12b01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-05ba1180039d12b01",
            "map_public_ip_on_launch": true,
            "owner_id": "648194886491",
            "tags": {
              "Name": "mb.dev-public_subnet.1"
            },
            "vpc_id": "vpc-09cd3732e3ff9bd62"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:648194886491:subnet/subnet-02beffff1290dcd5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-02beffff1290dcd5a",
            "map_public_ip_on_launch": true,
            "owner_id": "648194886491",
            "tags": {
              "Name": "mb.dev-public_subnet.2"
            },
            "vpc_id": "vpc-09cd3732e3ff9bd62"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:648194886491:vpc/vpc-09cd3732e3ff9bd62",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09353636a2cdad768",
            "default_route_table_id": "rtb-0f9288109a6ea15d3",
            "default_security_group_id": "sg-04ea0b19717a4481c",
            "dhcp_options_id": "dopt-210d5649",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09cd3732e3ff9bd62",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f9288109a6ea15d3",
            "owner_id": "648194886491",
            "tags": {
              "Name": "mb.dev-vpc"
            }
          }
        }
      ]
    }
  ]
}